re PR c++/38950 (ICE: deducing function template arguments for array type.)

PR c++/38950
        * pt.c (unify)[TEMPLATE_PARM_INDEX]: Convert to the tsubsted type.

From-SVN: r144239